--- a/src/assets/css_index.css
+++ b/src/assets/css_index.css
@@ -1,20 +1,56 @@
 body{
-    background-color: rgb(112, 210, 237);
+    background-color: #70D2ED;
 }
 
 .form-styles{
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     background-color: white;
+    box-shadow: 0px 0px 5px gray;
 }
 
 .form-styles form{
     border-radius: 5px;
-    box-shadow: 5px 5px 5px gray;
+    transition: box-shadow .3s ease-in-out;
     background-color: aliceblue;
-    border: 1px solid rgb(112, 210, 237);
+    border: 1px solid #70D2ED;
 }
 
 .navbar-styles{
-    background-color: rgb(112, 210, 237);
+    background-color: #70D2ED;
+}
+
+.sign_in-styles{
+    background-color: #9F341E;
+    color: white;
+}
+
+.log_in-styles{
+    background-color: #9F341E;
+    color: white;
+}
+
+.btn-options-styles{
+    background-color: none;
+    color: white;
+}
+
+.btn-options-styles:hover{
+    color: #9F341E;
+}
+
+.log_in-styles:hover{
+    box-shadow: 3px 3px 5px gray;
+    border: .5px solid #EA8267;
+    color: #9F341E;
+}
+
+.sign_in-styles:hover{
+    box-shadow: 3px 3px 5px gray;
+    border: .5px solid #EA8267;
+    color: #9F341E;
+}
+
+.form-styles form:hover{
+    box-shadow: 0px 0px 10px gray;
 }
