--- a/client/renderer/views/reserva.html
+++ b/client/renderer/views/reserva.html
@@ -13,24 +13,15 @@
     /> -->
     <title>Hello from Electron renderer!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css_index.css">
+    <link rel="stylesheet" href="../styles/reserva.css">
   </head>
   <body>
 
     <div class="container-fluid navbar-styles">
       <div class="row">
-        <div class="col-3 d-flex justify-content-center">
-            <p class="m-3 p-1">LOGO</p>
-        </div>
-        <div class="col-6 d-flex justify-content-center">
-          <button class="btn btn-options-styles m-3" type="submit">Reservar</button>
-          <button class="btn btn-options-styles m-3" type="submit">Flota</button>
-          <button class="btn btn-options-styles m-3" type="submit">Localidades</button>
-        </div>
-        <div class="col-3 d-flex justify-content-center">
-          <button class="btn m-3 sign_in-styles" type="submit">Crear Cuenta</button>
-          <button class="btn m-3 log_in-styles" type="submit">Iniciar Sesión</button>
-        </div>
+          <div class="col d-flex justify-content-center">
+              <h1>Reservaciones</h1>
+          </div>
       </div>
     </div>
     <div class="container-fluid mb-5">
