--- a/client/src/assets/css_index.css
+++ b/client/src/assets/css_index.css
@@ -54,3 +54,13 @@ body{
 .form-styles form:hover{
     box-shadow: 0px 0px 10px gray;
 }
+
+.imagen-styles{
+    background-color: white;
+    box-shadow: 0px 0px 10px gray;
+}
+
+.imagen-styles div img{
+    width: 100%;
+    height: auto;
+}
